--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "google-auth-library": "^9.14.2",
     "mongoose": "^8.5.4",
     "uuid": "^10.0.0"
   }
