--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
     "backblaze-b2": "^1.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "google-auth-library": "^9.14.2",
     "mongoose": "^8.5.4",
+    "uuid": "^10.0.0",
+    "aws-sdk": "^2.1437.0",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^10.0.0"
+    "multer-s3": "^2.10.0"
   }
 }
