--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "uuid": "^10.0.0",
     "aws-sdk": "^2.1437.0",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^2.10.0"
+    "multer-s3": "^2.10.0",
+    "sharp": "^0.32.1"
   }
 }
